sumo/tests/traci/VariableRetrieval/Polygon/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 168: Unsupported variable specified
